--- a/hotflaps/Config/DefaultEngine.ini
+++ b/hotflaps/Config/DefaultEngine.ini
@@ -2,8 +2,6 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-
-
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -26,4 +24,6 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/hotflaps")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/hotflaps")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/hotflaps")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/hotflaps")
 
